# OOFEA

./: README.md
C++/linear_elasticity/truss/: CMakeLists.txt  asd0.csv  main.cpp
C++/linear_elasticity/truss/input_files/: 3D-truss.elem_prop  3D-truss.geo  3D-truss.msh  generateMesh.sh  solution.txt
C++/linear_elasticity/truss/input_files/10bar/: 3D-truss.bc  3D-truss.elem_prop  3D-truss.msh
C++/linear_elasticity/truss/input_files/1bar/: 3D-truss.bc
C++/linear_elasticity/truss/src/: continuum_mechanics.cpp  continuum_mechanics.h  read_gmsh_bc.cpp  read_gmsh_bc.h  read_gmsh_element_property.cpp  read_gmsh_element_property.h  vulcan_define_system.cpp  vulcan_define_system.h
C++/linear_elasticity/truss/verification/: main.py
Python/: BEAM.py  BoundaryCondtion.py  DISPLACEMENT.py  ELEMENT.py  ELEMENT_DEFINITION.py  LOAD.py  SYSTEM.py  TRUSS.py  main.py  matrix.txt  sample.inp  test.txt
Python/example/: write_vtk_file.py
Python/examples/: 10bar_truss.py  10bartruss.vtk  vtk_io.py
Python/io/: VTK.py
Python/old/: matrix.txt
Python/old/example/: myFile.vtk
Python/old/src/base/: ELEMENT.py
Python/src/: BoundaryCondtion.py  NODE.py  SYSTEM.py
Python/src/base/: NODE.py
Python/src/mesh/: mesh.py  sample.inp
Python/src/output/: VTK.py
